[project]
name = "tencent_hunyuan_mt"
description = ""
version = "1.0.0"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["transformers>=4.56.0", "accelerate>=0.34.0", "huggingface_hub>=0.24.0", "safetensors>=0.4.4", "modelscope>=1.29.0", "compressed-tensors>=0.11.0"]

[project.urls]
Repository = "https://github.com/idealisticABO/ComfyUI_Tencent_hunyuan_MT"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/idealisticABO/ComfyUI_Tencent_hunyuan_MT/wiki"
"Bug Tracker" = "https://github.com/idealisticABO/ComfyUI_Tencent_hunyuan_MT/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Tencent_hunyuan_MT"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

