[project]
name = "tencent-hunyuan-mt"
description = "ComfyUI custom node for local translation using Tencent Hunyuan and HY-MT models."
version = "1.0.0"
license = "MIT"

dependencies = [
    "transformers>=4.56.0",
    "accelerate>=0.34.0",
    "huggingface_hub>=0.24.0",
    "safetensors>=0.4.4",
    "modelscope>=1.29.0",
    "compressed-tensors>=0.11.0"
]

[project.urls]
Repository = "https://github.com/idealisticABO/ComfyUI_Tencent_hunyuan_MT"
Documentation = "https://github.com/idealisticABO/ComfyUI_Tencent_hunyuan_MT#readme"
"Bug Tracker" = "https://github.com/idealisticABO/ComfyUI_Tencent_hunyuan_MT/issues"

[tool.comfy]
PublisherId = "idealistic-abo"
DisplayName = "Tencent Hunyuan MT Translate"
Icon = ""
includes = []